Spacing issue

--- a/client/views/intro/intro.import.less
+++ b/client/views/intro/intro.import.less
@@ -72,10 +72,17 @@
 }
 
 #apply-btn {
-  margin-top: 10px;
+  margin-top: 8px;
+  margin-bottom: 12px;
 }
 
-#sponsor-btn {
-  position: relative;
-  margin-top: 40px;
+#sponsor-label {
+  padding: 0;
+  margin: 0;
+  margin-top: 11px;
+}
+
+#sponsorship-links {
+  margin-top: 0px;
+  padding-top: 0px;
 }
